# darkutils

./: .gitignore  CMakeLists.txt  README.md
data/tests/: invalid_train.txt  masks_train.txt
data/tests/invalid_masks/: correct.txt  extra_face.txt  result.duv  result.duv.tsv  skipped_mask.txt  wrong_class.txt
data/tests/masks_cfg_weights/: yolov4-tiny-masks2.cfg
data/tests/masks_files/: 2.txt  3.jph_sanity_test  3.txt  4.txt
src/: cure.cpp  cure.h  cv_funcs.cpp  cv_funcs.h  du_common.cpp  du_common.h  du_tests.cpp  du_tests.h  du_utilities.cpp  du_utilities.h  dumanager.cpp  dumanager.h  extract_frames.cpp  extract_frames.h  helpers.cpp  helpers.h  main.cpp  validation.cpp  validation.h
